# python-habit-tracker

./: .coverage  .env  LICENSE  README.md  db.sqlite  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: CONCEPTION_PHASE.md
scripts/: test.sh
src/: main.py
src/cli/: analytics.py  experiments.py  habit.py  items.py  overview.py  profile.py  users.py  xp.py
src/core/: config.py  db.py  db_seeder.py  models.py
src/core/analytics/: __init__.py  dto.py  functions.py
src/core/habit/: __init__.py  errors.py  service.py
src/core/profile/: __init__.py  errors.py  service.py
src/core/xp/: __init__.py  errors.py  service.py
tests/: conftest.py  test_main.py
tests/cli/: test_analytics.py  test_habit.py  test_overview.py  test_profile.py  test_xp.py
tests/core/: test_analytics_functions.py  test_habit_service.py  test_xp_service.py
