[project]
name = "python-habit-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "rich>=14.2.0",
    "sqlmodel>=0.0.27",
    "typer>=0.19.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
]
